# simple-counter-webapp

./: Cargo.toml  README.md  Trunk.toml  counter-110a52178a2524a9.js  counter-110a52178a2524a9_bg.wasm  counter-44ec42301a910f77.js  counter-44ec42301a910f77_bg.wasm  counter-4f5624edb2487d64.js  counter-4f5624edb2487d64_bg.wasm  counter-8a695678e989ac64.js  counter-8a695678e989ac64_bg.wasm  counter-8feda642758fbcde.js  counter-8feda642758fbcde_bg.wasm  counter-94333ff2d536e94b.js  counter-94333ff2d536e94b_bg.wasm  counter-99b4d3abf9455bf4.js  counter-99b4d3abf9455bf4_bg.wasm  counter-a5902a3702878db8.js  counter-a5902a3702878db8_bg.wasm  counter-c99e4fbffd1157ce.js  counter-c99e4fbffd1157ce_bg.wasm  frontend-2bc1759a2840429c.js  frontend-2bc1759a2840429c_bg.wasm  frontend-5e5fc6c16bd8c7b0.js  frontend-5e5fc6c16bd8c7b0_bg.wasm  index.html  main-571c1b105b144c31.css  main-66ad42fe516511c2.css  main-72923cea184cdf76.css  main-86284e882aea22fd.css  main-990096e50c0fa8c4.css  main-9c95b176d4d07960.css  main-9cb954edabf207f9.css  main-cc8172c7d4d04786.css  main-eeb07d94c265c0da.css  package.json  tailwind.config.js  webpack.config.js
.github/workflows/: publish_gh_pages.yml
css/: index.scss
src/: main.rs
