[package]
name = "counter"
version = "0.1.0"
edition = "2021"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { version = "0.6.11", features = ["csr"] }
leptos_router = { version = "0.6.11", features = ["csr"] }
leptos_meta = { version = "0.6.11", features = ["csr"] }
serde = { version = "1.0.163", features = ["derive"] }
futures = "0.3.28"
console_log = "1.0.0"
log = "0.4.17"
console_error_panic_hook = "0.1.7"


[dependencies.web-sys]
version = "0.3.63"
features = ["HtmlInputElement", "Storage", "Window"]
